--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,8 +1,13 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
-.btn {
-  background-color: #4d90fe; 
+.form-inline {
+  margin-left: 25%;
+  margin-bottom: 2%;
 }
+.btn {
+  background-color: #4d90fe;
+}
+
 #map {
   height: 100%;
 }
