--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,7 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 .form-inline {
-  /*margin-left: 5%;*/
+  margin-left: 25%;
   margin-bottom: 2%;
 }
 .btn {
