--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,7 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 .form-inline {
-  margin-left: 25%;
+  margin-left: 30%;
   margin-bottom: 2%;
 }
 .btn {
@@ -10,6 +10,15 @@
 
 #map {
   height: 100%;
+}
+a {
+  background-color: #4484CE;
+}
+.container-fluid {
+  background-color: #4484CE;
+}
+h5 {
+  color: white !important;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
@@ -56,4 +65,15 @@ html, body {
   font-family: Roboto;
   font-size: 13px;
   font-weight: 300;
+}
+@media screen and (max-width: 775px) {
+  .form-inline {
+  margin: 0%;
+  top: 0;
+  width: 100%;
+  display: inline-block;
+  }
+  .btn {
+    display: none !important;
+  }
 }
