--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,8 +1,13 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
-.form-inline {
+/*.form-inline {
   margin-left: 30%;
   margin-bottom: 2%;
+
+}*/
+.form-control {
+  position: relative;
+
 }
 .btn {
   background-color: #4d90fe;
@@ -10,6 +15,14 @@
 
 #map {
   height: 100%;
+  z-index: 1;
+  margin: 0px;
+  top: 0;
+}
+.mapWrapper {
+  position: absolute;
+  z-index: 9999;
+  top: 18%;
 }
 a {
   background-color: #4484CE;
@@ -66,6 +79,7 @@ html, body {
   font-size: 13px;
   font-weight: 300;
 }
+
 @media screen and (max-width: 775px) {
   .form-inline {
   margin: 0%;
