--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,7 +8,7 @@
 img {
   height: 50px;
   width: 100px;
-  
+
 }
 .container-fluid {
   padding-bottom: 15px;
@@ -89,6 +89,7 @@ html, body {
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
   width: 200px;
+  border-radius: 100px;
 }
 
 #origin-input:focus,
@@ -101,6 +102,7 @@ html, body {
   background-color: #4d90fe;
   margin-left: 12px;
   padding: 5px 11px 0px 11px;
+  border-radius: 100px;
 }
 
 #mode-selector label {
@@ -109,7 +111,7 @@ html, body {
   font-weight: 300;
 }
 
-@media screen and (max-width: 775px) {
+@media screen and (max-width: 768px) {
   .form {
   margin: 0%;
   top: 0;
@@ -122,90 +124,21 @@ html, body {
   #origin-input {
     /*display: none;*/
     position: relative;
-    border-radius: 5px ;
+    border-radius: 100px ;
+    margin-top: 10px
   }
   #destination-input {
     /*display: none;*/
-    margin-top: 7.3%;
+    margin-top: 50px;
     position: relative;
-    border-radius: 5px ;
+    border-radius: 100px ;
     left: 0 !important;
   }
   #mode-selector {
-    margin-top: 13%;
+    margin-top: 90px !important;
+    border-radius: 100px;
     position: relative;
     left: 0 !important;
   }
 }
-@media screen and (max-width: 630px) {
-  .inputContainer {
-    position: absolute;
-  }
-  #origin-input {
-    /*display: none;*/
-    position: relative;
-    border-radius: 5px ;
-  }
-  #destination-input {
-    /*display: none;*/
-    margin-top: 8%;
-    position: relative;
-    border-radius: 5px ;
-    left: 0 !important;
-  }
-  #mode-selector {
-    margin-top: 15%;
-    position: relative;
-    left: 0 !important;
-  }
-}
-
-@media screen and (max-width: 545px) {
-  .inputContainer {
-    position: absolute;
-  }
-  #origin-input {
-    /*display: none;*/
-    position: relative;
-    border-radius: 5px ;
-    display: block;
-  }
-  #destination-input {
-    /*display: none;*/
-    margin-top: 11.5%;
-    position: relative;
-    border-radius: 5px ;
-    left: 0 !important;
-    display: block;
-  }
-  #mode-selector {
-    margin-top: 21%;
-    position: relative;
-    left: 0 !important;
-    display: block;
-  }
-  @media screen and (max-width: 365px) {
-    .inputContainer {
-      position: absolute;
-    }
-    #origin-input {
-      /*display: none;*/
-      position: relative;
-      border-radius: 5px ;
-      display: block;
-    }
-    #destination-input {
-      /*display: none;*/
-      margin-top: 12%;
-      position: relative;
-      border-radius: 5px ;
-      left: 0 !important;
-      display: block;
-    }
-    #mode-selector {
-      margin-top: 21%;
-      position: relative;
-      left: 0 !important;
-      display: block;
-    }
 }
