main Ui complete working infoBox has .5 opacity for now. working on transition animations

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -124,6 +124,7 @@ html, body {
 @media screen and (max-width: 768px) {
 #infoBox {
   width: 220px;
+  overflow: hidden;
 }
   .form {
   margin: 0%;
