added button with animation

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -103,19 +103,35 @@ html, body {
   top: 280px;
   color: white;
 }
-#infoBox {
+.infoBox {
+  overflow: hidden;
   background-color: #4d90fe;
   padding: 5px;
-  width: 300px;
+  width: 95px;
+  height: 39px;
   border-radius: 25px;
-  margin: 0px;
+  margin-left: 12px;
+
   display: inline-block;
   z-index: 10;
-  opacity: .5;
-  /*transform: scale(2) translateY(-50%) translateX(50%);*/
-  /*transition-duration: all 2s ease-in-out;*/
+  box-shadow: 0 1px 6px black;
+  /*opacity: .5;*/
 }
+.transform {
+  /*transition: width 2s, height 2s, background-color 2s, transform 2s;*/
+  transition: all 2s ease;
+}
+.transform-active {
+  height: 420px;
+  width: 200px;
+  margin-left: 0px;
+}
+/*#infoBox:hover {
+  width: 300px;
+  height: 200px;
+}*/
 #close {
+  z-index: 1;
   border: ;
   border-radius: 100px;
   background-color: #4484ce;
@@ -123,8 +139,13 @@ html, body {
 }
 
 @media screen and (max-width: 768px) {
+/*#infoBox:hover {
+  width: 195px;
+  height: 200px;
+}*/
 #infoBox {
   width: 220px;
+  /*width: 20px;*/
 }
   .form {
   margin: 0%;
@@ -159,6 +180,9 @@ html, body {
 @media screen and (max-width: 401px) {
   #infoBox {
     width: 195px;
+  }
+  #close {
+    left: 0;
   }
   #origin-input {
     margin-left: 0px;
